samples/_failures_safe/1761524899_9e577c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef6bbc87.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_ef6bbc87.c:167:26: error: expected ‘)’ at end of input
  167 |     graph_reset_visited(g
      |                        ~ ^
      |                          )
./samples/SAFE/__tmp_ef6bbc87.c:167:5: error: expected declaration or statement at end of input
  167 |     graph_reset_visited(g
      |     ^~~~~~~~~~~~~~~~~~~
